# bodycap_uncompress

./: .gitignore  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/tohami/bodycap_uncompress/: BodycapUncompressPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/tohami/bodycap_uncompress_example/: MainActivity.kt
example/integration_test/: app_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  slots_data.dart
example/test/: widget_test.dart
ios/: bodycap_uncompress.podspec
ios/Classes/: BodycapUncompressPlugin.h  BodycapUncompressPlugin.m  SwiftBodycapUncompressPlugin.swift  lib_bitStream.c  lib_bitStream.h  lib_compress_defines.h  lib_uncompress.c  lib_uncompress.h  nrf_log.h
lib/: uncompress_lib_bindings.dart  uncompress_util.dart
